--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
 
-    <script src = "operator.js"> </script>
+    <script src = "switch.js"> </script>
 
     </html>
