--- a/ObjectAndFunctions/index.html
+++ b/ObjectAndFunctions/index.html
@@ -9,6 +9,6 @@
         <h1>Section 2: JavaScript Language Basics</h1>
     </body>
 
-    <script src = "functionReturnFunction.js"> </script>
+    <script src = "Challenge.js"> </script>
 
     </html>
