--- a/Udemy/BudgetApp/starter/index.html
+++ b/Udemy/BudgetApp/starter/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             
-            <div class="container clearfix">
+            <div class="container__clearfix">
                 <div class="income">
                     <h2 class="icome__title">Income</h2>
                     
@@ -62,7 +62,9 @@
                             <div class="right clearfix">
                                 <div class="item__value">+ 2,100.00</div>
                                 <div class="item__delete">
-                                    <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
+                                    <button class="item__delete--btn">
+                                        <i class="ion-ios-close-outline"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
